# folder-structure

./: .gitignore  CONTRIBUTING.md  README.md  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg
folder_structure/: __init__.py  cli.py  info.py  tree.py
